<resources>
    <string name="app_name">TicTac Toe</string>
    <string name="play_offline_text">Play offline</string>
    <string name="lets_get_started">Let\'s get started</string>
    <string name="select_game_type">Select Game Mode</string>
    <string name="play_with_device">Play with device</string>
    <string name="play_with_friends">Play with friend</string>
    <string name="play_onlie">Play online</string>
    <string name="device_text">device</string>
    <string name="play_local">Play local</string>
    <string name="leader_board">Leader board</string>
    <string name="play_invitation">Play invitation</string>
    <string name="remove_ads_text">Remove ads</string>
    <string name="You_text">You</string>
    <string name="opponent_text">Opponent</string>
    <string name="you_lose_text">You lose this match ...!</string>
    <string name="restart_text">Restart</string>
    <string name="back_string">Back</string>
    <string name="you_win_text">You win this match...!</string>
    <string name="isWin_text">is win...!</string>
    <string name="winner_unknow_text">Winner Unknow ?</string>
    <string name="done_text">Done</string>
    <string name="easy_text">Easy</string>
    <string name="hrad_text">Hard</string>
    <string name="medium_text">Medium</string>
    <string name="search_about_player2_hint">Search for your opponent by name or ID...</string>
    <string name="searching_text">Searching...</string>
    <string name="request_text">Request</string>
    <string name="no_result_text">No result</string>
    <string name="online_text">Online</string>
    <string name="offline_text">Offline</string>
    <string name="in_game_text">In the game</string>
    <string name="search_opponent">Who’s your next challenge? Search for your opponent now!</string>
    <string name="no_internet_message">You are not connected to the internet. Please check your Wi-Fi or mobile data and try again.</string>
    <string name="back_text">Back</string>
    <string name="dismiss_text">dismiss</string>
    <string name="already_select_your_opponent">You already selected your oppenent.</string>
    <string name="waiting_room_text">waiting room</string>
    <string name="award_winner_text">Winner Award</string>
    <string name="waiting_to_joinText">Waiting to join...</string>
    <string name="start_text">Start</string>
    <string name="leave_text">Leave</string>
    <string name="join_text">join</string>
    <string name="wait_text">Wait</string>
    <string name="dialog_leave_room_title">Leave waiting room?</string>
    <string name="dialog_refuse_room_title">Refuse join room?</string>
    <string name="ok_text">Ok</string>
    <string name="dialog_opponent_leave_room_message">Your opponent is leave this room, You are ready to leave also ?</string>
    <string name="dialog_opponent_refuse_room_message">Your opponent is refused to join this room, You are ready to leave ?</string>
    <string name="confiramtion_to_leave_waiting_room">Are you sure you want to leave waiting room ?</string>
    <string name="request_to_join_to_waiting_room_notification_message_text">Requested you to join their waiting room for a game. Tap to join now!</string>
    <string name="refuse_text">refuse</string>
    <string name="loading_text">Loading...</string>
    <string name="notifications_text">Notifications</string>
    <string name="failed_loading_text">Failed to loading \n notifications.</string>
    <string name="Refrech_text">Refresh</string>
    <string name="since_text">Since</string>
    <string name="no_notification_found_text">No notifications found</string>
    <string name="all_notifications_was_readed_message">All notifications was  readed .</string>
    <string name="delete_this_notification_text">Delete this notification</string>
    <string name="report_issue_to_notification_team_text">Report issue to Notification Team</string>
    <string name="notification_removed_successfully">Notification deleted successfully</string>
    <string name="notification_removed_failed">Failed to delete the notification. Please try again.</string>
    <string name="requested_you_to_join_to_their_room">requested you to join to their room.</string>
    <string name="report_a_problem_text">Report a problem</string>
    <string name="send_text">Send</string>
    <string name="type_an_explain_hint">Type an explanation...</string>
    <string name="report_automaticly_info_message">Informations about your account will be automatically included in this report.</string>
    <string name="describe_a_problem_text">please describe the problem you are experience.</string>
    <string name="failed_to_sending_report">The report couldn\'t be finished. Please retry</string>
    <string name="sending_repot_successful_text">Your report has been sent successfully.</string>
    <string name="profile_text">Profile</string>
    <string name="follow_text">Follow</string>
    <string name="message_text">Message</string>
    <string name="player_batteles_text">Player batteles*</string>
    <string name="follower">Follower</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="followings">Followings</string>
    <string name="champion">Champion</string>
    <string name="champions">Champions</string>
    <string name="UnFollow_text">Unfollow</string>
    <string name="isFailed_text">is failes. Please try again!</string>
    <string name="you_are_now_follow">"You are following "</string>
    <string name="you_are_now_Unfollow">"You are now Unfollow "</string>
    <string name="edit_text">Edit</string>
    <string name="write_your_nameher_hint">Write your name here</string>
    <string name="save_text">Save</string>
    <string name="select_profile_image_text">Select profile image :</string>
    <string name="failed_to_upDate_your_profile">Failed upDate your profile . Please try again later.</string>
    <string name="success_to_upDate_your_profile">Your profile is Edited successfully .</string>
    <string name="no_messages_text"><![CDATA[<No messages>]]></string>
    <string name="loading_messages_canceled_message">Loading messages was cancelled. Please refresh and try again.</string>
    <string name="logout_text">Logout</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="settings_text">Settings</string>
    <string name="add_profile_text">Add new profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_name_hint">your name</string>
    <string name="your_email_hint">your email</string>
    <string name="your_password_hint">your password</string>
    <string name="confirm_your_password_hint">confirm your password</string>
    <string name="create_text">Create</string>
    <string name="already_have_account_text">Already have an account?</string>
    <string name="login_text">Login</string>
    <string name="create_account_text">Create an account</string>
    <string name="i_dont_have_account_text">I don\'t have an account?</string>
    <string name="welcome_text">Welcome !</string>
    <string name="signUp_message_text">Please complete your databio correctly</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="login_message_text">To continue using this app, please log in first.</string>
    <string name="sgin_up_text">Sgin Up</string>
    <string name="your_fname_hint">your first name</string>
    <string name="your_lname_hint">your last name</string>
    <string name="first_name_text">First name*</string>
    <string name="last_name_text">Last name(Opt)*</string>
    <string name="email_text">Email*</string>
    <string name="password_text">Password*</string>
    <string name="confirm_password_text">Confirm Password*</string>
    <string name="confirmation_vistor_or_sgin_dialog_message">Would you like to continue as a visitor or sign up to get full access?</string>
    <string name="continue_text">continue</string>
    <string name="noIntent_exception_title">Internet exception</string>
    <string name="noInternet_exception_message">No internet connection. Please check your network and try again.</string>
    <string name="faild_to_create_account_title">Fialed SginUp</string>
    <string name="fialed_to_create_account_message">Failed to Sgin up , please try agin later .</string>
    <string name="email_already_used_message">" The email address is already in use by another account."</string>
    <string name="email_already_used_title">SginUp failed ?</string>
    <string name="dissmes_text">dissmes</string>
    <string name="sign_text">Sign In</string>
    <string name="Permession_error">"You don't have the required permissions to access the data. Please check your permission settings."</string>
    <string name="error_permissiton_titele">Permission error !</string>
    <string name="network_permissiton_titele">Network error !</string>
    <string name="networck_error_message">There was a problem with the internet connection. Please check your connection and try again.</string>
    <string name="diconnected_error_message">\"The connection to the database was lost. Please try again.\"</string>
    <string name="opperation_error_titele">Operation error !</string>
    <string name="operation_error_message">An error occurred while attempting to complete the operation. Please try again later.</string>
    <string name="unknow_error_titele">UnKnow error</string>
    <string name="unknow_error_message">An unknown error occurred. Please try again later</string>
    <string name="my_account_text">My accounts</string>
    <string name="log_into_another_Account_text">Log into another account</string>
    <string name="or_text">or</string>
    <string name="create_new_account">Create new account</string>
    <string name="signIn_failed_error_title">SignIn failed !</string>
    <string name="incorrect_password_failed_error_message">Incorrect password!</string>
    <string name="no_account_found_error_message">\"No account found with this email!\"</string>
    <string name="log_out_title_text">Log out ?</string>
    <string name="confriramation_logout_message">Are you sure you want to log out ?</string>
    <string name="yes_text">yes</string>
    <string name="log_out_failed_title_text">Logout Failed</string>
    <string name="confriramation_logout_failed_message">Logout failed. Please try again.</string>
    <string name="see_more_text">See more</string>
    <string name="select_language_text">Select language</string>
    <string name="english_text">English</string>
    <string name="arabic_text">العربية</string>
    <string name="email_required_error_title">Email required</string>
    <string name="email_required_error_message">Enter your email to continue.</string>
    <string name="password_required_error_title">Password required</string>
    <string name="password_required_error_message">Enter your password to countinue.</string>
    <string name="email_and_password_required_error_message">Enter your email and password to continue.</string>
    <string name="email_and_password_required_error_title">Email and password required</string>
    <string name="add_friends_text">Add friends</string>
    <string name="failed_to_get_player_data_message">Failed to retrieve your data. Please check your internet connection and try again.</string>
    <string name="failed_to_get_this_profile_message">Failed to retrieve this profile. Please check your internet connection and try again.</string>
    <string name="searching_about_frient_motivate_text">Find your friends now and reconnect with those great memories!</string>
    <string name="search_frieend_iput_hint">Search for friends...</string>
    <string name="add_text">add</string>
    <string name="accept_text">Accept</string>
    <string name="failed_to_load_page_message">Oops! Something went wrong while loading this page. Please tap to try reloading.</string>
</resources>