<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/white_background"
    >

    <ImageView
        android:id="@+id/no_internet_image"
        android:layout_width="326dp"
        android:layout_height="181dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/no_internet_image" />

    <TextView
        android:id="@+id/no_internet_message_text"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no_internet_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:fontFamily="@font/orbitron"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="5dp"
        android:text="@string/no_internet_message"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/no_internet_dialog_back_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/deep_blue_background"
        android:padding="10dp"
        android:layout_below="@+id/no_internet_message_text"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:text="@string/back_text"
        android:layout_margin="20dp"
        android:textSize="18dp"
        android:includeFontPadding="false"
        android:fontFamily="@font/orbitron_semibold"
        android:textColor="@color/white"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/no_internet_dialog_dismiss_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/light_blue_background"
        android:padding="10dp"
        android:layout_below="@+id/no_internet_dialog_back_btn"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:text="@string/dismiss_text"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:includeFontPadding="false"
        android:fontFamily="@font/orbitron_semibold"
        android:textColor="@color/white"
        android:gravity="center"
        />


</RelativeLayout>